Added dump files to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,7 @@ data_analysis/dumpfiles
 data_analysis/wikidatawiki-20161114.rdf
 data_analysis/reduced_items
 data_analysis/reduced_classes
+data_analysis/root_classes
+
 # tools
 data_analysis/wdtk-client-0.7.0.jar
