--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+boto==2.45.0
+bz2file==0.98
 cycler==0.10.0
+gensim==0.13.4.1
 matplotlib==1.5.3
 numpy==1.11.2
+protobuf==3.1.0.post1
 pyparsing==2.1.10
 python-dateutil==2.6.0
 pytz==2016.7
+requests==2.12.4
+scipy==0.18.1
 six==1.10.0
+smart-open==1.3.5
