Improved performance of graph walk sentence generation.

--- a/algorithm_config.json
+++ b/algorithm_config.json
@@ -16,7 +16,7 @@
     "subsampling": 0.00001,
     "negative sampling": 15,
     "iterations": 5,
-    "embeddings path": ""
+    "embeddings path": "/home/alex/PycharmProjects/thesis/data/algorithm_io/simple_sentence_class_embeddings-20161107"
   },
   "graph walk sentence sgns": {
     "embedding size": 300,
@@ -49,7 +49,7 @@
     },
     "distknn": {
       "sequences": "simple sentences",
-      "sgns": "simple sentences sgns",
+      "sgns": "simple sentence sgns",
       "classification": "distance-knn"
     },
     "linproj": {
