--- a/paths_config.json
+++ b/paths_config.json
@@ -18,5 +18,8 @@
   "triple sentence sgns": "data/algorithm_io/triple_sentence_sgns-20161107",
   "graph walk sentence sgns": "data/algorithm_io/graph_walk_sentence_sgns-20161107",
 
+  "subclass offsets": "data/algorithm_io/subclass_offsets-20161107",
+  "subclass offset plot": "data/plots/2d_subclass_offsets.png",
+
   "execution results": "evaluation/results_{}-20161107.csv"
 }
