--- a/algorithm_config.json
+++ b/algorithm_config.json
@@ -1,11 +1,9 @@
 {
   "triple sentences": {
-    "sentences path": ""
   },
   "graph walk sentences": {
     "depth": 4,
-    "max walks": 100,
-    "sentences path": ""
+    "max walks": 100
   },
   "triple sentence sgns": {
     "embedding size": 300,
@@ -32,149 +30,49 @@
   "distance-knn (k=15)": {
     "neighbors": 15
   },
-  "kri-knn (k=2&r=1)": {
-    "neighbors": 2,
-    "regularization param": 1
-  },
-  "kri-knn (k=5&r=1)": {
-    "neighbors": 5,
-    "regularization param": 1
-  },
-  "kri-knn (k=10&r=1)": {
-    "neighbors": 10,
-    "regularization param": 1
-  },
-  "kri-knn (k=15&r=1)": {
-    "neighbors": 15,
-    "regularization param": 1
-  },
-  "kri-knn (k=5&r=10)": {
-    "neighbors": 5,
-    "regularization param": 10
-  },
-  "kri-knn (k=15&r=10)": {
-    "neighbors": 15,
-    "regularization param": 10
-  },
   "linear projection": {
-    "sgd iterations": 5
-  },
-  "piecewise linear projection (c=30)": {
-    "clusters": 30,
     "sgd iterations": 5
   },
   "piecewise linear projection (c=50)": {
     "clusters": 50,
     "sgd iterations": 5
   },
-  "piecewise linear projection (c=70)": {
-    "clusters": 70,
-    "sgd iterations": 5
-  },
-  "piecewise linear projection (c=85)": {
-    "clusters": 85,
-    "sgd iterations": 5
-  },
-  "piecewise linear projection (c=100)": {
-    "clusters": 100,
-    "sgd iterations": 5
-  },
   "combinations": {
-    "ts+kriknn(k=2&r=1)": {
-      "sequences": "triple sentences",
-      "sgns": "triple sentence sgns",
-      "classification": "kri-knn (k=2&r=1)",
-      "training samples": 1083128
-    },
-    "ts+kriknn(k=5&r=1)": {
-      "sequences": "triple sentences",
-      "sgns": "triple sentence sgns",
-      "classification": "kri-knn (k=5&r=1)",
-      "training samples": 1083128
-    },
-    "ts+kriknn(k=10&r=1)": {
-      "sequences": "triple sentences",
-      "sgns": "triple sentence sgns",
-      "classification": "kri-knn (k=10&r=1)",
-      "training samples": 1083128
-    },
-    "ts+kriknn(k=15&r=1)": {
-      "sequences": "triple sentences",
-      "sgns": "triple sentence sgns",
-      "classification": "kri-knn (k=15&r=1)",
-      "training samples": 1083128
-    },
-    "ts+kriknn(k=5&r=10)": {
-      "sequences": "triple sentences",
-      "sgns": "triple sentence sgns",
-      "classification": "kri-knn (k=5&r=10)",
-      "training samples": 1083128
-    },
-    "ts+kriknn(k=15&r=10)": {
-      "sequences": "triple sentences",
-      "sgns": "triple sentence sgns",
-      "classification": "kri-knn (k=15&r=10)",
-      "training samples": 1083128
-    },
     "ts+distknn(k=15)": {
       "sequences": "triple sentences",
       "sgns": "triple sentence sgns",
       "classification": "distance-knn (k=15)",
-      "training samples": 1083128
+      "training samples": 198502
     },
     "ts+linproj": {
       "sequences": "triple sentences",
       "sgns": "triple sentence sgns",
       "classification": "linear projection",
-      "training samples": 1083128
-    },
-    "ts+pwlinproj(c=30)": {
-      "sequences": "triple sentences",
-      "sgns": "triple sentence sgns",
-      "classification": "piecewise linear projection (c=30)",
-      "training samples": 1083128
+      "training samples": 198502
     },
     "ts+pwlinproj(c=50)": {
       "sequences": "triple sentences",
       "sgns": "triple sentence sgns",
       "classification": "piecewise linear projection (c=50)",
-      "training samples": 1083128
-    },
-    "ts+pwlinproj(c=70)": {
-      "sequences": "triple sentences",
-      "sgns": "triple sentence sgns",
-      "classification": "piecewise linear projection (c=70)",
-      "training samples": 1083128
-    },
-    "ts+pwlinproj(c=85)": {
-      "sequences": "triple sentences",
-      "sgns": "triple sentence sgns",
-      "classification": "piecewise linear projection (c=85)",
-      "training samples": 1083128
-    },
-    "ts+pwlinproj(c=100)": {
-      "sequences": "triple sentences",
-      "sgns": "triple sentence sgns",
-      "classification": "piecewise linear projection (c=100)",
-      "training samples": 1083128
+      "training samples": 198502
     },
     "gw+distknn(k=15)": {
       "sequences": "graph walk sentences",
       "sgns": "graph walk sentence sgns",
       "classification": "distance-knn (k=15)",
-      "training samples": 1083128
+      "training samples": 198502
     },
     "gw+linproj" : {
       "sequences": "graph walk sentences",
       "sgns": "graph walk sentence sgns",
       "classification": "linear projection",
-      "training samples": 1083128
+      "training samples": 198502
     },
-    "gw+pwlinproj(c=30)" : {
+    "gw+pwlinproj(c=50)" : {
       "sequences": "graph walk sentences",
       "sgns": "graph walk sentence sgns",
-      "classification": "piecewise linear projection (c=30)",
-      "training samples": 1083128
+      "classification": "piecewise linear projection (c=50)",
+      "training samples": 198502
     }
   }
 }
