--- a/paths_config.json
+++ b/paths_config.json
@@ -44,6 +44,7 @@
   "subclass offsets": "data/algorithm_io/subclass_offsets-20161107",
   "subclass offset plot": "data/plots/2d_subclass_offsets.png",
   "embeddings plot": "data/plots/2d_embeddings.png",
+  "subclass offset cluster": "data/algorithm_io/subclass_offsets-20161107.json",
 
   "execution results": "evaluation/results_{}-20161107.csv",
   "evaluation": "evaluation/hybrid_evaluation-20161107.csv",
