Improved taxonomic overlap plots.

--- a/paths_config.json
+++ b/paths_config.json
@@ -49,7 +49,11 @@
   "execution results": "evaluation/results_{}-20161107.csv",
   "evaluation": "evaluation/hybrid_evaluation-20161107.csv",
   "local taxonomic overlaps": "data/evaluation/local_tax_overlaps_{}-20161107.csv",
-  "local taxonomic overlap histogram": "evaluation/plots/tax_overlap_hist_{}-20161107.png",
-  "ts+distknn evaluation plot": "evaluation/plots/knn_evaluation-20161107.png",
-  "ts+linproj evaluation plot": "evaluation/plots/linproj_evaluation-20161107.png"
+
+  "ts+distknn evaluation plot": "evaluation/plots/ts_knn_evaluation-20161107.png",
+  "ts+linproj evaluation plot": "evaluation/plots/ts_linproj_evaluation-20161107.png",
+  "ts+distknn overlap hist": "evaluation/plots/ts_knn_overlaps_hist-20161107.png",
+  "ts+linproj overlap hist": "evaluation/plots/ts_linproj_overlaps_hist-20161107.png",
+  "ts+distknn overlap distribution": "evaluation/plots/ts_knn_overlaps_distr-20161107.png",
+  "ts+linproj overlap distribution": "evaluation/plots/ts_linproj_overlaps_distr-20161107.png"
 }
